# powermeter

./: README.md
firm/: Cargo.toml  partitions.csv  sdkconfig.defaults
firm/.cargo/: config.toml
firm/src/: config.html  main.rs
