[package]
name = "powermeter"
version = "0.1.0"
authors = ["Kenta IDA <fuga@fugafuga.org>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"
license = "Apache-2.0"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
embedded-svc = { version = "0.26.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
anyhow = { version = "1.0.75", features = ["backtrace"] }
heapless = "0.8.0"
url = "2.5.0"
embedded-io = { version = "0.6.1", features = ["std"] }

[build-dependencies]
embuild = "0.31.3"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = {name = "espressif/mdns", version = "1.2.2"}
